<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_current_gradient"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp">
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="2"
                        android:baselineAligned="false">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="1.2">
                            <TextView
                                android:id="@+id/pop"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pop"
                                android:textSize="14sp"
                                android:textColor="#FFFFFF" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/temp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/temp"
                                    android:textSize="24sp"
                                    android:textColor="#FFFFFF"
                                    android:padding="5dp"/>
                                <TextView
                                    android:id="@+id/feels_like"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/feels_like"
                                    android:textSize="14sp"
                                    android:textColor="#FFFFFF"
                                    android:padding="5dp"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_weight="0.8">
                            <ImageView
                                android:id="@+id/icon"
                                android:layout_width="78dp"
                                android:layout_height="73dp"
                                android:src="@drawable/status"
                                tools:ignore="ContentDescription,NestedWeights" />
                            <TextView
                                android:id="@+id/status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/status"
                                android:textSize="16sp"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                    </LinearLayout>
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="3"
                        android:baselineAligned="false"
                android:layout_marginTop="15dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:weightSum="2"
                            android:layout_marginStart="35dp">
                            <ImageView
                                android:layout_weight="1.3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/humidity"
                                android:layout_gravity="center"
                                tools:ignore="ContentDescription,NestedWeights" />
                            <TextView
                                android:id="@+id/humidity"
                                android:layout_weight="0.7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textSize="14sp"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:weightSum="2"
                            android:layout_marginStart="20dp">
                            <ImageView
                                android:layout_weight="1.3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/uv"
                                android:layout_gravity="center"
                                tools:ignore="ContentDescription,NestedWeights" />
                            <TextView
                                android:id="@+id/uv"
                                android:layout_weight="0.7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/uv"
                                android:textSize="14sp"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:weightSum="2">
                            <ImageView
                                android:layout_weight="1.3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/windy"
                                android:layout_gravity="center"
                                tools:ignore="ContentDescription,NestedWeights" />
                            <TextView
                                android:id="@+id/windy"
                                android:layout_weight="0.7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/windy"
                                android:textSize="14sp"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                    </LinearLayout>

        </LinearLayout>
        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forecast"
                    android:textSize="26sp"
                    android:textColor="#363B64"
                    android:textStyle="bold"
                    android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_current_gradient"
            android:orientation="vertical">
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <TextView
                            android:id="@+id/hourly_forecast_status"
                            android:layout_width="wrap_content"
                            android:layout_height="17.04dp"
                            android:text="@string/status"
                            android:textSize="14sp"
                            android:textColor="#A098AE"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:id="@+id/hourly_forecast_date"
                            android:layout_width="wrap_content"
                            android:layout_height="19.47dp"
                            android:text="@string/date"
                            android:textSize="16sp"
                            android:textColor="#363B64"
                            android:textStyle="bold"/>
                    </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hourly_forecast_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="1"
                        tools:listitem="@layout/hourly_forecast_view"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:background="@drawable/bg_current_gradient"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:id="@+id/daily_forecast_status"
                    android:layout_width="wrap_content"
                    android:layout_height="17.04dp"
                    android:text="@string/status"
                    android:textSize="14sp"
                    android:textColor="#A098AE"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/daily_forecast_date"
                    android:layout_width="wrap_content"
                    android:layout_height="19.47dp"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:textColor="#363B64"
                    android:textStyle="bold"/>
            </LinearLayout>
            <ListView
                android:id="@+id/daily_forecast_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedScrolling" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
